<resources>
    <string name="app_name">YUM</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="name_prompt">What\'s your name?</string>
    <string name="message_accept">By tapping Sign Up and Accept, you agree to the Terms of Service and Privacy Policy.</string>
    <string name="signUp">Sign Up and Accept</string>
    <string name="fname">FIRST NAME</string>
    <string name="lname">LAST NAME</string>
    <string name="bday">BIRTHDAY</string>
    <string name="email">EMAIL</string>

    <string name="email_prompt">Birthday Recommendations! mmmmmh...</string>
    <string name="email_directive">Please enter your Email and Birthday</string>
    <string name="cont">Continue</string>
    <string name="motto">Your Body. Your Dinner. Your Choice.</string>
    <string name="diet_directive">Please enter diet restrictions and your current weight. Let\'s start meal planning!</string>
    <string name="diet_restrict">Dietary Restrictions</string>
    <string name="weight">Current Weight</string>
    <string name="diet_header">Now for the Scary Part!</string>
    <string name="done">DONE</string>
    <string name="start">Let\'s get started!</string>
    <string name="cuisine_header">Can you smell what\'s cooking?</string>
    <string name="cuisine_directive">Let\'s get dive in with culinary style!</string>
    <string name="cuisine_prompt">Cuisines from around the World:</string>
</resources>
