<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.mobile.yum.registration.reg_DietFrag">


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/cuisine_header"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/cuisine_header"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/cuisine_directive"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@+id/cuisine_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/cuisine_directive"
        />

    <TextView
        android:id="@+id/cuisine_prompt"
        android:layout_below="@+id/cuisine_directive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/cuisine_prompt"
        />




    <Button
        android:id="@+id/continue_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"

        android:text="@string/cont"
        />


</RelativeLayout>